// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveArticleFlag should render the base live article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bwzfXH WFEid"
    >
      <div
        class="sc-bxivhb hmIbmT"
      >
        ◆
      </div>
      <div
        class="sc-EHOje jboioV"
      >
        BASE
      </div>
    </div>
  </div>
</body>
`;

exports[`LiveArticleFlag should render the breaking article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bwzfXH WFEid"
    >
      <div
        class="sc-bxivhb hmIbmT"
      >
        ◆
      </div>
      <div
        class="sc-EHOje jboioV"
      >
        BREAKING
      </div>
    </div>
  </div>
</body>
`;

exports[`LiveArticleFlag should render the live article flag 1`] = `
<body>
  <div>
    <div
      class="sc-bwzfXH WFEid"
    >
      <div
        class="sc-bxivhb hmIbmT"
      >
        ◆
      </div>
      <div
        class="sc-EHOje jboioV"
      >
        LIVE
      </div>
    </div>
  </div>
</body>
`;
